--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>Forms</title>
+    <title>Web Development - Contact Form</title>
 </head>
 
 <body>
